--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 
 body{
-    background: url('\\images\\back.png');
+    background: url('/images/back.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
