--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body{
 .div2{
     background-color: var(--div2-color);
     height: 75vh;
-    /* width: 30vw; */
+    width: 30vw;
     display: flex;
     /* justify-content: center;
     align-items: center; */
@@ -59,7 +59,6 @@ body{
     width: 25vw;
     justify-content: center;
     padding-top: 10px;
-    overflow: scroll;
 }
 
 .div4 {
@@ -70,10 +69,28 @@ body{
     align-items: center;
     border-radius: 8px;
     padding-left: 10px;
-    margin-top: 200px;
     margin-left: 9px;
     font-weight: 500;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.div4_final {
+    background-color:var(--inner-color);
+    height: 5vh;
+    width: 24vw;
+    display: flex;
+    align-items: center;
+    border-radius: 8px;
+    padding-left: 12px;
+    margin-left: 9px;
+    margin-top: 20px;
+    font-weight: 500;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+
+.div4_final p{
+    margin-left: 60px;
 }
 
 
@@ -91,9 +108,62 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.div5_pay {
+    background-color: var(--inner-color);
+    height: 35vh;
+    width: 24vw;
+    border-radius: 8px;
+    padding-top: 12px;
+    margin-left: 9px;
+    margin-top: 30px;
+    font-weight: 500;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.div5_ver{
+    background-color: var(--inner-color);
+    height: 40vh;
+    width: 24vw;
+    display: flex;
+    align-items: center;
+    border-radius: 8px;
+    padding-left: 12px;
+    margin-left: 9px;
+    margin-top: 30px;
+    font-weight: 500;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.div5_fin {
+    background-color: var(--inner-color);
+    height: 20vh;
+    width: 24vw;
+    display: flex;
+    align-items: center;
+    border-radius: 8px;
+    padding-left: 12px;
+    margin-left: 9px;
+    margin-top: 70px;
+    font-weight: 500;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
 .div5 p{
     font-size: 20px;
     margin: 10px 0 ;
+}
+
+.div5_pay p{
+    padding: 12px;
+    font-size: 20px;
+    margin: 15px 0;
+    font-weight: bold;
+}
+
+.div5_ver p {
+    font-size: 20px;
+    margin: 15px 0;
 }
 
 input{
@@ -103,6 +173,68 @@ input{
     border: 0;
     outline: none;
     border-radius: 5px;
+}
+
+select {
+    font-size: 16px;
+    width: 159%;
+    padding: 10px 12px;
+    border: 0;
+    outline: none;
+    border-radius: 5px;
+}
+
+.div6_index {
+    height: 6vh;
+    width: 24vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    margin-left: 9px;
+    margin-top: 20px;
+    font-weight: 500;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.div6_pay {
+    height: 6vh;
+    width: 24vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    margin-left: 9px;
+    margin-top: 7px;
+    font-weight: 500;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.div6_ver {
+    height: 6vh;
+    width: 24vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    margin-left: 9px;
+    margin-top: 26px;
+    font-weight: 500;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.div6_fin {
+    height: 6vh;
+    width: 24vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    margin-left: 9px;
+    margin: 10px;
+    margin-top: 60px;
+    font-weight: 500;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 button {
@@ -121,13 +253,122 @@ button {
     color: white;
 }
 
+.suc{
+    background-color: rgba(128, 255, 0, 0.61);
+    color: black;
+}
+
+.fail {
+    background-color: rgba(255, 0, 0, 0.699);
+}
+
+
 button:hover {
     cursor: pointer;
     background-color: var(--hover-color);
 }
 
+.div6_fin  .suc:hover {
+    cursor: pointer;
+    background-color: rgb(128, 255, 0);
+}
+
+.div6_fin .fail:hover {
+    cursor: pointer;
+    background-color: rgb(255, 0, 0);
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    font-weight: 500;
+    font-family:-apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Open Sans',
+    'Helvetica Neue',
+    sans-serif;
+}
+
+.div4 a:hover{
+    text-decoration: underline;
+}
+
 span{
     font-weight: lighter;
+}
+
+.otp input{
+    width: 10%;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    background-color: rgb(255, 255, 255);
+}
+.otp{
+display: flex;
+justify-content: center;
+}
+
+img{
+width: 180px;
+}
+
+footer{
+    /* margin-left: -210px; */
+    margin-top: 20px;
+    margin-bottom: -45px;
+} 
+
+.div4_final span{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--fing-color);
+    border-radius: 50%;
+    width: 21px;
+    height: 22px;
+    font-weight: 500;
+    font-family: -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Open Sans',
+    'Helvetica Neue',
+    sans-serif;
+}
+
+.div4_final span:hover{
+    background-color: rgba(116, 116, 119, 0.61);
+    cursor: pointer;
+}
+
+.up{
+    padding-bottom: 4px;
+    color: var(--final-color);
+}
+
+.label{
+    background-color: rgb(224, 224, 224);
+    font-size: 16px;
+    width: 30%;
+    padding: 10px 12px;
+    border: 0;
+    outline: none;
+    border-radius: 5px;
+}
+
+.div4 img{
+    margin-left: 240px;
+    
 }
 
 #icon {
@@ -137,4 +378,21 @@ span{
 
 form > input {
     width: 100%;
+}
+
+.pk {
+    background-color: rgba(211, 208, 207, 0.486);
+    max-width: 59px;
+    padding: 12px 12px 12px 12px;
+    position: relative;
+    top: -39px;
+    border-radius: 6px 6px 6px 6px;
+    border-left: 1px solid rgba(61, 59, 58, 0.397);
+    float: right;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    font-size: 14px;
 }
