--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ input{
     border-radius: 5px;
 }
 
-button {
+.button {
     font-size: 25px;
     width: 100%;
     height: 100%;
@@ -120,7 +120,7 @@ button {
     color: white;
 }
 
-button:hover {
+.button:hover {
     cursor: pointer;
     background-color: var(--hover-color);
 }
