--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ input{
     border-radius: 5px;
 }
 
-.button {
+.subbut {
     font-size: 25px;
     width: 100%;
     height: 100%;
@@ -120,7 +120,7 @@ input{
     color: white;
 }
 
-.button:hover {
+.subbut:hover {
     cursor: pointer;
     background-color: var(--hover-color);
 }
